--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -116,16 +116,14 @@
                 <h3 class="subheader">Primo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Tortelloni fatti in casa con ripieno di ricotta conditi con burro e Parmigiano Reggiano invecchiato 36 mesi</li>
+                    <li>Tortelloni fatti in casa con ripieno di Ricotta conditi con Burro e Parmigiano Reggiano invecchiato 36 mesi</li>
                 </ul>
                 <h3 class="subheader">Secondo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>180 grammi di Hamburger di Manzo, Parmigiano Reggiano invecchiato 36 mesi, Rucola, Aceto Balsamico Tradizionale di Modena</li>
-                    <li>Parmigiano Reggiano invecchiato 36 mesi servito a scaglie con Aceto Balsamico Tradizionale di Modena extra vecchio</li>
+                    <li>180 grammi di Hamburger di Manzo, Parmigiano Reggiano invecchiato 36 mesi, Rucola, Aceto Balsamico Tradizionale di Modena <br>servito con Parmigiano Reggiano invecchiato 36 mesi a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
-                <!-- <h3 class="menu-subheader"><small>Servito con Prosecco Extra Dry o Dolce</small></h3> -->
                 <ul>
                     <li>Tris di dolci con Cheesecake, Sacher, Blondie</li>
                     <li>Caffè e Amari</li>
