--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bevande incluse e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
-                <p>Il filo conduttore del menù sono i prodotti dei salumifici e dei caseifici jesini e modenesi, uniti dall'aceto balsamico extra vecchio di Modena.</p>
+                <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di CIngoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>aceto balsamico extra vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
@@ -111,21 +111,21 @@
                     <li>Prosciutto di Parma 24 Mesi</li>
                     <li>Ciauscolo senza conservanti</li>
                     <li>Ricotta di Vacca con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
-                    <li>Crema di Lenticchie di Col fiorito con Zampone di Modena</li>
+                    <li>Crema di Lenticchie di Col fiorito con pezzi di Cotechino di Modena</li>
                 </ul>
                 <h3 class="subheader">Primo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Tortelloni fatti in casa con ripieno di Ricotta conditi con Burro e Parmigiano Reggiano invecchiato 36 mesi</li>
+                    <li>Ravioli fatti in casa con ripieno di Ricotta di Capra conditi con Burro e Parmigiano Reggiano</li>
                 </ul>
                 <h3 class="subheader">Secondo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>180 grammi di Hamburger di Manzo, Parmigiano Reggiano invecchiato 36 mesi, Rucola, Aceto Balsamico Tradizionale di Modena <br>servito con Parmigiano Reggiano invecchiato 36 mesi a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
+                    <li>180 grammi di Hamburger di Manzo, Cialda di Parmigiano Reggiano, Rucola, Aceto Balsamico Tradizionale di Modena <br>servito con Parmigiano Reggiano a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
                 <ul>
-                    <li>Tris di dolci con Cheesecake, Sacher, Blondie</li>
+                    <li>Millefoglie con Crema Chantilly</li>
                     <li>Caffè e Amari</li>
                 </ul>
                 <hr>
@@ -135,12 +135,13 @@
                     <li>Ciauscolo senza conservanti della Macelleria Sandroni Gianni di Cingoli di Macerata</li>
                     <li>Parmigiano Reggiano invecchiato 36 mesi del Caseificio Valtiepido di Castelvetro di Modena</li>
                     <li>Ricotta di Vacca del Caseificio Piandelmedico di Jesi</li>
+                    <li>Ricotta di Capra del Caseificio Piandelmedico di Jesi</li>
                     <li>Burro del Caseificio Piandelmedico di Jesi</li>
                     <li>Aceto Balsamico Tradizionale di Modena Extra Vecchio di nostra produzione, invecchiato almeno 40 anni in botti di rovere, castagno, ciliegio e gelso. </li>
                     <li>Aceto Balsamico Tradizionale di Modena di nostra produzione, invecchiato almeno 12 anni in botti di rovere, castagno, ciliegio e gelso</li>
-                    <li>Tortelloni fatti a mano di nostra produzione</li>
-                    <li>Manzo per Hamburger proveniente da Vacche Marchigiane del Macello .......</li>
-                    <li>Zampone del Salumifici Bellucci di Castelnuovo di Modena</li>
+                    <li>Ravioli fatti a mano di nostra produzione</li>
+                    <li>Manzo per Hamburger proveniente da Vacche Marchigiane</li>
+                    <li>Cotechino del Salumifici Bellucci di Castelnuovo di Modena</li>
                 </ul>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
