--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bevande incluse e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
-                <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di CIngoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>aceto balsamico extra vecchio di Modena</strong>.</p>
+                <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di CIngoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
@@ -111,7 +111,7 @@
                     <li>Prosciutto di Parma 24 Mesi</li>
                     <li>Ciauscolo senza conservanti</li>
                     <li>Ricotta di Vacca con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
-                    <li>Crema di Lenticchie di Col fiorito con pezzi di Cotechino di Modena</li>
+                    <li>Crema di Lenticchie di Colfiorito con Cotechino a pezzi di Modena</li>
                 </ul>
                 <h3 class="subheader">Primo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
