--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -121,7 +121,7 @@
                 <h3 class="subheader">Secondo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>180 grammi di Hamburger di Manzo, Cialda di Parmigiano Reggiano, Rucola, Aceto Balsamico Tradizionale di Modena <br>servito con Parmigiano Reggiano a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
+                    <li>180 grammi di Hamburger di Manzo, Cialda di Parmigiano Reggiano, Rucola, Aceto Balsamico Tradizionale di Modena, servito con Parmigiano Reggiano a scaglie con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
                 </ul>
                 <h3 class="subheader">Dolce</h3>
                 <ul>
