--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -99,7 +99,7 @@
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
                 <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bevande incluse e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
-                <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di CIngoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
+                <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di Cingoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
@@ -116,7 +116,7 @@
                 <h3 class="subheader">Primo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
-                    <li>Ravioli fatti in casa con ripieno di Ricotta di Capra conditi con Burro e Parmigiano Reggiano</li>
+                    <li>Ravioli fatti in casa con ripieno di Ricotta di Pecora conditi con Burro e Parmigiano Reggiano</li>
                 </ul>
                 <h3 class="subheader">Secondo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
@@ -135,7 +135,7 @@
                     <li>Ciauscolo senza conservanti della Macelleria Sandroni Gianni di Cingoli di Macerata</li>
                     <li>Parmigiano Reggiano invecchiato 36 mesi del Caseificio Valtiepido di Castelvetro di Modena</li>
                     <li>Ricotta di Vacca del Caseificio Piandelmedico di Jesi</li>
-                    <li>Ricotta di Capra del Caseificio Piandelmedico di Jesi</li>
+                    <li>Ricotta di Pecora dell'Azienda Agricola Carzedda di Staffolo</li>
                     <li>Burro del Caseificio Piandelmedico di Jesi</li>
                     <li>Aceto Balsamico Tradizionale di Modena Extra Vecchio di nostra produzione, invecchiato almeno 40 anni in botti di rovere, castagno, ciliegio e gelso. </li>
                     <li>Aceto Balsamico Tradizionale di Modena di nostra produzione, invecchiato almeno 12 anni in botti di rovere, castagno, ciliegio e gelso</li>
