--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -5,21 +5,21 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes">
     <title>Beerstrot | Cenone di San Silvestro</title>
-    <meta name="description" content="31 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
+    <meta name="description" content="31 Dicembre ore 20:30. Cenone di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Andrea Tagliazucchi"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@beerstrot"/>
-    <meta name="twitter:title" content="Cena di San Silvestro"/>
-    <meta name="twitter:description" content="331 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
+    <meta name="twitter:title" content="Cenone di San Silvestro"/>
+    <meta name="twitter:description" content="331 Dicembre ore 20:30. Cenone di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
     <meta name="twitter:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2016.jpg"/>
     <meta name="twitter:url" content="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta property="og:url" content="http://www.beerstrot.it/eventi/san-silvestro-2016.html"/>
     <meta property="og:type" content="article"/>
-    <meta property="og:title" content="Cena di San Silvestro"/>
-    <meta property="og:description" content="31 Dicembre ore 20:30. Cena di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
+    <meta property="og:title" content="Cenone di San Silvestro"/>
+    <meta property="og:description" content="31 Dicembre ore 20:30. Cenone di San Silvestro con Menù a base di prodotti locali e Aceto Balsamico Extra Vecchio di Modena."/>
     <meta property="og:image" content="http://www.beerstrot.it/asset/img/large/san-silvestro-2016.jpg"/>
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920">
