--- a/eventi/index.html
+++ b/eventi/index.html
@@ -79,7 +79,7 @@
                     <a href="http://www.beerstrot.it/eventi/san-silvestro-2016.html"><img class="extra-space-image-event" src="http://www.beerstrot.it/asset/img/thumbs/san-silvestro-2016-th.jpg" alt="Cena di San Silvestro"></a>
                 </div>
                 <div class="medium-6 large-6 columns">
-                    <h2>Cena di San Silvestro</h2>
+                    <h2>Cenone di San Silvestro</h2>
                     <p>Il filo conduttore del menù sono i prodotti dei salumifici e dei caseifici jesini e modenesi, uniti dall'aceto balsamico extra vecchio di Modena.</p>
                     <a href="http://www.beerstrot.it/eventi/san-silvestro-2016.html">Scopri l'evento &rarr;</a>
                 </div>
