--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -105,7 +105,7 @@
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
                 <hr>
                 <h2>Menù</h2>
-                <h3 class="subheader">Antipasti</h3>
+                <h3 class="subheader">Antipasto</h3>
                 <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
                     <li>Prosciutto di Parma 24 Mesi</li>
