--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -106,7 +106,7 @@
                 <hr>
                 <h2>Menù</h2>
                 <h3 class="subheader">Antipasto</h3>
-                <h3 class="menu-subheader"><small>Serviti con Birra Artigianale o Vino della casa</small></h3>
+                <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
                 <ul>
                     <li>Prosciutto di Parma 24 Mesi</li>
                     <li>Ciauscolo senza conservanti</li>
