--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -111,7 +111,7 @@
                     <li>Prosciutto di Parma 24 Mesi</li>
                     <li>Ciauscolo senza conservanti</li>
                     <li>Ricotta di Vacca con Aceto Balsamico Tradizionale di Modena Extra Vecchio</li>
-                    <li>Crema di Lenticchie di Colfiorito con Cotechino a pezzi di Modena</li>
+                    <li>Crema di Lenticchie di Colfiorito con Cotechino di Modena sbriciolato</li>
                 </ul>
                 <h3 class="subheader">Primo</h3>
                 <h3 class="menu-subheader"><small>Servito con Birra Artigianale o Vino della casa</small></h3>
