--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -98,7 +98,7 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
-                <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bevande incluse e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
+                <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bere incluso e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
                 <p>il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di Cingoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
