--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -128,6 +128,7 @@
                 <ul>
                     <li>Millefoglie con Crema Chantilly</li>
                     <li>Caffè e Amari</li>
+                    <li>Panettone Artigianale</li>
                 </ul>
                 <hr>
                 <h2>Gli Ingredienti</h2>
