--- a/404.html
+++ b/404.html
@@ -67,19 +67,19 @@
         }
 
         function onLoad(){
-           var urlLink1 = "http://www.instagram.com/OwenDunnigan";
-           var urlLink2 = "http://www.twitter.com/OwenDunnigan";
-           var urlLink3 = "http://www.facebook.com/OwenDunnigan";
+           var urlLink1 = "https://www.instagram.com/beerstrot";
+           var urlLink2 = "https://www.twitter.com/beerstrot";
+           var urlLink3 = "https://www.facebook.com/cavecchiabeerstrot";
            switch(getMobileOperatingSystem()){
                case 'Android':
-                    urlLink1 = "instagram://user?username=owendunnigan";
-                    urlLink2 = "twitter://user?username=owendunnigan";
-                    urlLink3 = "facebook://user?username=owendunnigan";
+                    urlLink1 = "instagram://user?username=beerstrot";
+                    urlLink2 = "twitter://user?username=beerstrot";
+                    urlLink3 = "facebook://user?username=cavecchiabeerstrot";
                     break;
                case 'iOS':
-                    urlLink1 = "instagram://user?username=owendunnigan";
-                    urlLink2 = "twitter://user?username=owendunnigan";
-                    urlLink3 = "facebook://user?username=owendunnigan";
+                    urlLink1 = "instagram://user?username=beerstrot";
+                    urlLink2 = "twitter://user?username=beerstrot";
+                    urlLink3 = "fb://user?username=cavecchiabeerstrot";
                     break;
                default:
                     break;
