--- a/404.html
+++ b/404.html
@@ -74,12 +74,12 @@
                case 'Android':
                     urlLink1 = "instagram://user?username=beerstrot";
                     urlLink2 = "twitter://user?username=beerstrot";
-                    urlLink3 = "facebook://user?username=cavecchiabeerstrot";
+                    urlLink3 = "fb://www.facebook.com/cavecchiabeerstrot";
                     break;
                case 'iOS':
                     urlLink1 = "instagram://user?username=beerstrot";
                     urlLink2 = "twitter://user?username=beerstrot";
-                    urlLink3 = "fb://user?username=cavecchiabeerstrot";
+                    urlLink3 = "fb://www.facebook.com/cavecchiabeerstrot";
                     break;
                default:
                     break;
