--- a/404.html
+++ b/404.html
@@ -37,11 +37,11 @@
         switch (getMobileOperatingSystem()) {
             case 'Android':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://www.facebook.com/cavecchiabeerstrot";
+                urlLink1 = "fb://page/cavecchiabeerstrot";
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://https://www.facebook.com/cavecchiabeerstrot";
+                urlLink1 = "fb://page/cavecchiabeerstrot";
                 break;
             default:
                 break;
