--- a/404.html
+++ b/404.html
@@ -37,18 +37,17 @@
         switch (getMobileOperatingSystem()) {
             case 'Android':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://page/1073741829";
+                urlLink1 = "fb://profile/397632563730269";
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://page/1073741829";
+                urlLink1 = "fb://profile/397632563730269";
                 break;
             default:
                 break;
         }
         document.getElementById('yourLink1').setAttribute('href', urlLink1);
         document.getElementById('yourLink2').setAttribute('href', urlLink2);
-        document.getElementById('yourLink3').setAttribute('href', urlLink3);
     }
     window.onload = onLoad;</script>
 </head>
