--- a/404.html
+++ b/404.html
@@ -41,7 +41,7 @@
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://profile/397632563730269";
+                urlLink1 = "fb://pg/cavecchiabeerstrot";
                 break;
             default:
                 break;
