--- a/404.html
+++ b/404.html
@@ -37,11 +37,11 @@
         switch (getMobileOperatingSystem()) {
             case 'Android':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://profile/397632563730269";
+                urlLink1 = "fb://page/1549149915357715";
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://pg/cavecchiabeerstrot";
+                urlLink1 = "fb://page/1549149915357715";
                 break;
             default:
                 break;
