--- a/404.html
+++ b/404.html
@@ -37,11 +37,11 @@
         switch (getMobileOperatingSystem()) {
             case 'Android':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://facewebmodal/f?href=cavecchiabeerstrot";
+                urlLink1 = "fb://page/?id='397632563730269'";
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://facewebmodal/f?href=cavecchiabeerstrot";
+                urlLink1 = "fb://page/?id='397632563730269'";
                 break;
             default:
                 break;
