--- a/404.html
+++ b/404.html
@@ -37,11 +37,11 @@
         switch (getMobileOperatingSystem()) {
             case 'Android':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://page/?id='1073741829'";
+                urlLink1 = "fb://page/?id='cavecchiabeerstrot'";
                 break;
             case 'iOS':
                 urlLink2 = "instagram://user?username=beerstrot";
-                urlLink1 = "fb://page/?id='1073741829'";
+                urlLink1 = "fb://page/?id='cavecchiabeerstrot'";
                 break;
             default:
                 break;
