--- a/eventi/san-silvestro-2016.html
+++ b/eventi/san-silvestro-2016.html
@@ -98,7 +98,7 @@
             </aside>
             <div class="medium-7 large-8 columns extra-margin-first-paragraph-blog" role="content" >
                 <h2>Fai il botto a Ca' Vecchia Beerstrot</h2>
-                <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bere incluso e una bottiglia di spumante ogni 4 persone per il brindisi di Capodanno.</p>
+                <p>Per la sarata di <strong>San Silvestro</strong> abbiamo creato un menù a 70€ bere incluso.</p>
                 <p>Il filo conduttore del menù è molto semplice: abbiamo preso i migliori salumifici e caseifici locali e delle colline di Modena, una "vergara" di San Vittore di Cingoli, li abbiamo uniti con un unico meraviglioso ingrediente: l'<strong>Aceto Balsamico Extra Vecchio di Modena</strong>.</p>
                 <p>Prenotazone richiesta.</p>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
@@ -128,6 +128,7 @@
                 <ul>
                     <li>Millefoglie con Crema Chantilly</li>
                     <li>Caffè e Amari</li>
+                    <li>Dopo la mezzanotte Panettone Artigianale</li>
                 </ul>
                 <hr>
                 <h2>Gli Ingredienti</h2>
@@ -143,6 +144,7 @@
                     <li>Ravioli fatti a mano di nostra produzione</li>
                     <li>Manzo per Hamburger proveniente da Vacche Marchigiane</li>
                     <li>Cotechino del Salumifici Bellucci di Castelnuovo di Modena</li>
+                    <li>Panettone Artigianale della Pasticceria  Giuliodori di Filottrano</li>
                 </ul>
                 <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
                 <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
