--- a/menu/index.html
+++ b/menu/index.html
@@ -123,12 +123,16 @@
                             <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                         </li>
                         <li>
+                            <h3>Prosciutto di Parma &emsp; 9</h3>    
+                            <p>stagionato 30 mesi</p>
+                        </li>
+                        <li>
                             <h3>Cavoletti di Bruxelles &emsp; 4,5</h3>
                             <p>brasati alla birra</p>
                         </li>
                         <li>
                             <h3>Fagottini di Verza &emsp; 4,5</h3>
-                            <p>ripieni di zucca</p>
+                            <p>ripieni di patate</p>
                         </li>
                         <li>
                             <h3>Insalata Mista &emsp; 4</h3>    
@@ -139,8 +143,8 @@
                             <p>patate fritte a bastoncini</p>
                         </li>
                         <li>
-                            <h3>Zuppa di Stagione &emsp; 5</h3>    
-                            <p>vellutata di zucca</p>
+                            <h3>Vellutata di Castagne &emsp; 5</h3>    
+                            <p>con funghi porcini e guanciale  croccante</p>
                         </li>
                     </ul>
                 </div>
@@ -166,8 +170,8 @@
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Autunno &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, composta di funghi, panna</p>
+                            <h3>Inverno &emsp; 8,9 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, scaglie di parmigiano, rucola, aceto balsamico tradizionale di modena</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
@@ -183,7 +187,7 @@
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
-                            <p>180 grammi di hamburger di quinoa, rucola, composta di barbabietola rossa, salsa di senape e miele</p>
+                            <p>180 grammi di hamburger di quinoa, rucola, cipolla; composta di rape rosse, senape e miele</p>
                         </li>
                     </ul>                      
                 </div>   
@@ -205,8 +209,8 @@
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Pollo Piccadilly &emsp; 12</h3>    
-                            <p>300 grammi di petto marinato <br>servito con coleslaw</p>
+                            <h3>Pork Belly &emsp; 10</h3>    
+                            <p>pancetta di maiale al forno <br>servito con coleslaw</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
