--- a/asporto/index.html
+++ b/asporto/index.html
@@ -196,7 +196,7 @@
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
-                            <p>180 grammi di hamburger di quinoa, rucola, composta di barbabietola rossa, salsa di senape e miele</p>
+                            <p>180 grammi di hamburger di quinoa, rucola, cipolla; composta di rape rosse, senape e miele</p>
                         </li>
                     </ul>                      
                 </div>
