--- a/menu/index.html
+++ b/menu/index.html
@@ -421,16 +421,12 @@
                             <p>tavignano</p>
                         </li>
                         <li>
-                            <h3>Prosecco Millesimato DOC &emsp;14</h3>
-                            <p>bervini</p>
+                            <h3>Spumante Prosecco Extra Dry &emsp;14</h3>
+                            <p>val d'oca</p>
                         </li>
                         <li>
                             <h3>Franciacorta Saten &emsp;32</h3>
                             <p>mosnel</p>
-                        </li>
-                        <li>
-                            <h3>Spumante Moscato Dolce &emsp;13</h3>
-                            <p>val d'oca </p>
                         </li>
                     </ul>
                 </div>
