--- a/menu/index.html
+++ b/menu/index.html
@@ -115,24 +115,20 @@
                             <p>serviti con salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Nachos Supreme &emsp; 5</h3>    
-                            <p>tortilla con peperoncini e cheddar</p>
+                            <h3>Nachos Supreme &emsp; 5,5</h3>    
+                            <p>tortillas con cheddar, peperoncino fresco, guacamole</p>
                         </li>
                         <li>
                             <h3>Peperoncini Piccanti &emsp; 4,5</h3>    
                             <p>peperoncini ripieni di formaggio avvolti nella pancetta</p>
                         </li>
                         <li>
-                            <h3>Prosciutto di Parma &emsp; 9</h3>    
-                            <p>stagionato 30 mesi</p>
+                            <h3>Olive all'Ascolana &emsp; 5</h3>    
+                            <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Cavoletti di Bruxelles &emsp; 4,5</h3>
-                            <p>brasati alla birra</p>
-                        </li>
-                        <li>
-                            <h3>Fagottini di Verza &emsp; 4,5</h3>
-                            <p>ripieni di patate</p>
+                            <h3>Anellli di Cipolla &emsp; 4,5</h3>
+                            <p>cipolla gialla impanata e fritta</p>
                         </li>
                         <li>
                             <h3>Insalata Mista &emsp; 4</h3>    
@@ -143,8 +139,8 @@
                             <p>patate fritte a bastoncini</p>
                         </li>
                         <li>
-                            <h3>Vellutata di Castagne &emsp; 5</h3>    
-                            <p>con funghi porcini e guanciale  croccante</p>
+                            <h3>Gazpacho di Avocado &emsp; 5</h3>    
+                            <p>avocado, cetrioli, cipolla, pomodorini, bacon</p>
                         </li>
                     </ul>
                 </div>
@@ -170,24 +166,24 @@
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Inverno &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, scaglie di parmigiano, rucola, aceto balsamico tradizionale di modena</p>
+                            <h3>Emiliano &emsp; 10,5 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Pulled Pork &emsp; 8,9</h3>    
-                            <p>spalla di maiale sfilacciata, coleslow, cetriolini, salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Mini Burger &emsp; 6</h3>    
-                            <p>100 grammi di manzo, cheddar</p>
+                            <h3>California &emsp; 10,5</h3>    
+                            <p>180 grammi di manzo, cheddar, pancetta, tropea, pomodoro fresco, guacamole</p>
                         </li>
                         <li>
                             <h3>Vegetariano &emsp; 8</h3>    
                             <p>180 grammi di hamburger di quinoa, rucola, cipolla; composta di rape rosse, senape e miele</p>
+                        </li>
+                        <li>
+                            <h3>Mini Burger &emsp; 6</h3>    
+                            <p>100 grammi di manzo, cheddar</p>
                         </li>
                     </ul>                      
                 </div>   
@@ -197,10 +193,6 @@
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Chili &emsp; 9,5</h3>    
-                            <p>carne e fagioli serviti con polenta <br>leggermente piccante</p>
-                        </li>
-                        <li>
                             <h3>Costine &emsp; 11,5</h3>    
                             <p>costine di maiale al forno in salsa barbeque <br>servite con patate fritte</p>
                         </li>
@@ -209,8 +201,8 @@
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Pork Belly &emsp; 10</h3>    
-                            <p>pancetta di maiale al forno <br>servito con coleslaw</p>
+                            <h3>Roastbeef &emsp; 8,9</h3>    
+                            <p>lombata di manzo di marchigiana <br>servita con salsa ai capperi e patate fritte</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
