--- a/menu/index.html
+++ b/menu/index.html
@@ -127,7 +127,7 @@
                             <p>il più tipico dei piatti marchigiani</p>
                         </li>
                         <li>
-                            <h3>Anellli di Cipolla &emsp; 4,5</h3>
+                            <h3>Anelli di Cipolla &emsp; 4,5</h3>
                             <p>cipolla gialla impanata e fritta</p>
                         </li>
                         <li>
