--- a/menu/index.html
+++ b/menu/index.html
@@ -136,7 +136,7 @@
                         </li>
                         <li>
                             <h3>Patate Fritte &emsp; 4</h3>    
-                            <p>patate fritte a bastoncini</p>
+                            <p>patate fritte con buccia</p>
                         </li>
                         <li>
                             <h3>Gazpacho di Avocado &emsp; 5</h3>    
