--- a/menu/index.html
+++ b/menu/index.html
@@ -229,8 +229,8 @@
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
-                                <h3>Sacher &emsp; 5</h3>
-                                <p>torta di cioccolato con marmellata di albicocca <br>servita con panna montata</p>
+                                <h3>Vino di Visciola e Biscotti Artigianali &emsp; 6</h3>
+                                <p>vino di visciola artigianale e biscotti secchi</p>
                             </li>
                         </ul>
                         <blockquote>
