--- a/menu/index.html
+++ b/menu/index.html
@@ -416,9 +416,20 @@
                             <h3>Spumante Prosecco Extra Dry &emsp;14</h3>
                             <p>val d'oca</p>
                         </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="subheader">Per i Dessert 6cl.</h2>
+                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Franciacorta Saten &emsp;32</h3>
-                            <p>mosnel</p>
+                            <h3>Nero Visciola &emsp;3,5</h3>
+                            <p>antinori</p>
+                        </li>
+                        <li>
+                            <h3>Baladin Xyauyu &emsp;4,5</h3>
+                            <p>birra invecchiata in botti di madeira</p>
                         </li>
                     </ul>
                 </div>
