--- a/menu/index.html
+++ b/menu/index.html
@@ -139,6 +139,10 @@
                             <p>patate fritte con buccia</p>
                         </li>
                         <li>
+                            <h3>Ratatouille &emsp; 4,5</h3>
+                            <p>verdura tagliata a dadi cotta al forno</p>
+                        </li>
+                        <li>
                             <h3>Gazpacho di Avocado &emsp; 5</h3>    
                             <p>avocado, cetrioli, cipolla, pomodorini, bacon</p>
                         </li>
@@ -162,12 +166,12 @@
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Deciso &emsp; 8,9 / doppio 14,9</h3> 
-                            <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
-                        </li>
-                        <li>
                             <h3>Emiliano &emsp; 10,5 / doppio 14,9</h3> 
                             <p>180 grammi di manzo, parmigiano 36 mesi, rucola, aceto balsamico tradizionale di modena</p>
+                        </li>
+                        <li>
+                            <h3>Estivo &emsp; 8,9 / doppio 14,9</h3> 
+                            <p>180 grammi di manzo, composta di feta e pomodori, melanzana grigliata, rucola</p>
                         </li>
                         <li>
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>    
@@ -229,7 +233,7 @@
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
-                                <h3>Vino di Visciola e Biscotti Artigianali &emsp; 6</h3>
+                                <h3>Vino di Visciola e Biscotti Artigianali &emsp; 5</h3>
                                 <p>vino di visciola artigianale e biscotti secchi</p>
                             </li>
                         </ul>
