--- a/asporto/index.html
+++ b/asporto/index.html
@@ -167,7 +167,7 @@
                     <h2 class="subheader">Hamburger <br><small>Servito con patate fritte. Cottura media o, a richiesta, al sangue.<br>Con cotture più lunghe la carne  risulta secca.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
-                            <h3>Beerstrot 180 / 360 &emsp; 10,5 / doppio 14,5</h3>    
+                            <h3>Beerstrot &emsp; 10,5 / doppio 14,5</h3>    
                             <p>180 / 360 grammi di manzo, cheddar, pancetta, cipolla caramellata, insalata, pomodorini confit</p>
                         </li>
                         <li>
