--- a/menu/index.html
+++ b/menu/index.html
@@ -233,8 +233,8 @@
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
-                                <h3>Vino di Visciola e Biscotti Artigianali &emsp; 5</h3>
-                                <p>vino di visciola artigianale e biscotti secchi</p>
+                                <h3>Vino di Visciola e Biscotti Secchi &emsp; 5</h3>
+                                <p>vino di visciola, anicette e cantucci artigianali</p>
                             </li>
                         </ul>
                         <blockquote>
