--- a/menu/index.html
+++ b/menu/index.html
@@ -76,7 +76,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Menù</h1>
             <hr>
-            <h4>Dal <strong>Martedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong><span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
+            <h4>Dal <strong>Lunedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong><span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fi-telephone"></i> 071 8853384</a></span></h4>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Prenota</a></span>
             <hr>
         </div>
@@ -515,13 +515,12 @@
             </div>
             <div class="small-6 medium-3 large-3 large-collapse columns" itemscope itemtype="http://schema.org/Restaurant">
                 <h4 class="subheader">Orari apertura</h4>
-                <meta itemprop="openingHours" content="Tu,We,Th,Fr,Sa,Su 19:00-23:00">
+                <meta itemprop="openingHours" content="Mo,Tu,We,Th,Fr,Sa,Su 19:00-23:00">
                 <div class="row">
                     <div class="large-12 medium-12 small-12 columns">
-                        <p>Mar&ensp;&ndash;&ensp;Dom &emsp; 19&ensp;&ndash;&ensp;23</p>
+                        <p>Aperto tutti i giorni<br>Dalle 19 alle 23</p>
                     </div>
                 </div>
-                <p><em>Chiuso Lunedì</em></p>
             </div>
             <div class="small-6 medium-3 large-3 columns">
                 <h4 class="subheader">Accettiamo</h4>
