--- a/menu/index.html
+++ b/menu/index.html
@@ -233,6 +233,10 @@
                                 <p>cheesecake stile new york</p>
                             </li>
                             <li>
+                                <h3>Panna Cotta &emsp; 5</h3>
+                                <p>servita con sciroppo d'acero</p>
+                            </li>
+                            <li>
                                 <h3>Vino di Visciola e Biscotti &emsp; 5</h3>
                                 <p>vino di visciola servito con anicette e cantucci artigianali</p>
                             </li>
