--- a/asporto/index.html
+++ b/asporto/index.html
@@ -218,8 +218,8 @@
                             <p>350 grammi di picanha di manzo <br>servita su letto di rucola</p>
                         </li>
                         <li>
-                            <h3>Roastbeef &emsp; 8,9</h3>    
-                            <p>lombata di manzo di marchigiana <br>servita con salsa ai capperi e patate fritte</p>
+                            <h3>Roastbeef Inglese&emsp; 8,9</h3>    
+                            <p>girello di manzo<br>servito con salsa ai capperi</p>
                         </li>
                         <li>
                             <h3>T-Bone Steak &emsp; 4 per etto</h3>    
